src/objects/Modality_Mode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Modalidad_producto__c</fullName>
        <label>Modalidad producto</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Modality_Select__c</fullName>
        <label>Modality_Select</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product name related to Opportunity</description>
        <inlineHelpText>Product name related to Opportunity</inlineHelpText>
        <label>Product_Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Modality_Definition</label>
</CustomObject>